fix spacing for desktop and mobile views

--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@
 /*========== Hero Container ==========*/
 #banner-container {
   /* border: 3px blue solid; */
-  height: 50vh;
+  height: max-content;
 }
 
 #banner-container h1 {
@@ -30,6 +30,7 @@
 
 #links {
   margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 /*========== Project Highlights ==========*/
@@ -62,7 +63,7 @@
 /*========== About section ==========*/
 #about-container {
   /* border: 3px green solid; */
-  height: 60vh;
+  height: max-content;
 }
 
 #about-container h2 {
@@ -71,6 +72,7 @@
 
 #about-container p {
   width: 50%;
+  margin-bottom: 0.5rem;
 }
 
 #tech-p {
@@ -78,16 +80,12 @@
 }
 
 #tech-used {
-  display: flex;
-  flex-flow: column wrap;
-  height: 20%;
-  width: 15%;
   margin-top: 0.5rem;
 }
 
 #about-container a {
   display: block;
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 /*========== Contact section ==========*/
@@ -99,6 +97,7 @@
 
 #contact-header {
   margin-bottom: 2rem;
+  margin-top: 4rem;
 }
 
 #get-in-touch {
@@ -119,7 +118,7 @@
 }
 
 form {
-  width: 800px;
+  width: 100%;
 }
 
 form label {
@@ -141,7 +140,7 @@ form button {
 }
 
 .form-width {
-  width: 50rem;
+  width: 100%;
 }
 
 /*========== Footer ==========*/
@@ -177,6 +176,10 @@ footer a {
 }
 
 @media screen and (max-width: 1024px) {
+  #about-container p {
+    width: 100%;
+  }
+
   .project {
     flex-direction: column-reverse;
   }
@@ -188,8 +191,33 @@ footer a {
   #contact-container {
     flex-direction: column;
   }
+}
 
-  .form-width {
-    width: 25rem;
+/*========== Tablet ==========*/
+@media screen and (max-width: 768px) {
+  #main-container {
+    padding: 1rem 2rem;
+  }
+
+  #banner-container h1 {
+    width: 75%;
+  }
+}
+
+/*========== Mobile ==========*/
+@media screen and (max-width: 425px) {
+  #main-container {
+    padding: 0.5rem;
+  }
+
+  #banner-container h1 {
+    width: 100%;
+  }
+
+  footer {
+    flex-flow: row wrap;
+    justify-content: center;
+    padding-top: 1rem;
+    text-align: center;
   }
 }
